--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,24 @@ on:
   push:
     branches: [main]
   pull_request:
+  workflow_dispatch:
+    inputs:
+      pygraphistry_ref:
+        description: "pygraphistry ref (branch/tag/sha)"
+        required: false
+        default: "main"
+      pygraphistry_repo:
+        description: "pygraphistry repo URL"
+        required: false
+        default: "https://github.com/graphistry/pygraphistry.git"
 
 jobs:
   tests:
     runs-on: ubuntu-latest
+    env:
+      PYGRAPHISTRY_REF: ${{ github.event.inputs.pygraphistry_ref || 'main' }}
+      PYGRAPHISTRY_REPO: ${{ github.event.inputs.pygraphistry_repo || 'https://github.com/graphistry/pygraphistry.git' }}
+      PYGRAPHISTRY_INSTALL: "1"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,7 +35,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest pandas
-          pip install git+https://github.com/graphistry/pygraphistry.git
 
       - name: Run tests
         run: |
